--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">자세한 정보</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projects">진행중인 프로젝트</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#signup">연락</a></li>
                     </ul>
                 </div>
             </div>
