--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">RTG</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5"></h2>
-                        <a class="btn btn-primary" href="#about">Get Started</a>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5">RTG. 최고의 퀄리티를 보장하며 최고의 직원 대우를 보장하는 로블록스 개임 개발 프로젝트.</h2>
+                        <a class="btn btn-primary" href="#about">소개를 시작해볼까요?</a>
                     </div>
                 </div>
             </div>
