--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Built with Bootstrap 5</h2>
+                        <h2 class="text-white mb-4">RTG</h2>
                         <p class="text-white-50">
-                            Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-                            <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
-                            The theme is open source, and you can use it for any purpose, personal or commercial.
+                            로블록스 역사상 손에 꼽을 명작이자 고퀄인 로블록스 게임으로 손꼽힐 RTG의 게임들.
+                            RTG는 여러분들을 환영합니다. 
                         </p>
                     </div>
                 </div>
