--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Phone</h4>
+                                <h4 class="text-uppercase m-0">전화번호</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">+1 (555) 902-8832</div>
+                                <div class="small text-black-50">+82 (10) 9095-5228 (이유 없는 전화는 거절합니다.)</div>
                             </div>
                         </div>
                     </div>
