--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">전화번호</h4>
+                                <h4 class="text-uppercase m-0">추가 연락</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">+82 (10) 9095-5228 (이유 없는 전화는 거절합니다.)</div>
+                                <div class="small text-black-50">만약 제가 디코나 이메일을 안보면 CJ대한통운#5395 또는 Rყαɳ#8562로 연락 주세요!</div>
                             </div>
                         </div>
                     </div>
