--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">이메일</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">pjh52338@naver.com으로 연락주시면 됩니다. (이메일 확인이 늦을 수 있습니다.)</a></div>
+                                <div class="small text-black-50">pjh52338@naver.com으로 연락주시면 됩니다. (이메일 확인이 늦을 수 있습니다.)</div>
                             </div>
                         </div>
                     </div>
