--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="utf-8"
+    <meta http-equiv="Content-Type" http-equiv="Set-Cookie" content="text/html; charset=utf-8">
 </head>
