--- a/contact.html
+++ b/contact.html
@@ -2,4 +2,6 @@
 <html lang="ko">
 <head>
     <meta http-equiv="Content-Type" http-equiv="Set-Cookie" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RTG Official Contact</title>
 </head>
