--- a/contact.html
+++ b/contact.html
@@ -5,3 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RTG Official Contact</title>
 </head>
+
+
+<body>
+    <form class="gform" method="POST" data-email="djaeyeo@gmail.com"
+    action=
+    "https://script.google.com/macros/s/AKfycbwTpUJCOaTp2h9BXJONMaj0bQ_2C96_RNzjYSfc4u1d9Rlpet67MRT-PX2sk4gxt0Vxbg/exec">
