--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" http-equiv="Set-Cookie" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact"
     <title>RTG Official Contact</title>
 </head>
 
