--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
 <head>
-    <meta http-equiv="Content-Type" http-equiv="Set-Cookie" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contact">
-    <title>RTG Official Contact</title>
+    <title>RTG 공식 지원 양식</title>
 </head>
-
-
-<body>
-    <form class="gform" method="POST" data-email="djaeyeo@gmail.com"
-    action=
-    "https://script.google.com/macros/s/AKfycbwTpUJCOaTp2h9BXJONMaj0bQ_2C96_RNzjYSfc4u1d9Rlpet67MRT-PX2sk4gxt0Vxbg/exec">
+</html>
