--- a/contact.html
+++ b/contact.html
@@ -2,5 +2,6 @@
 <html>
 <head>
     <title>RTG 공식 지원 양식</title>
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
 </head>
 </html>
