--- a/contact.html
+++ b/contact.html
@@ -3,5 +3,18 @@
 <head>
     <title>RTG 공식 지원 양식</title>
     <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+    <script type="text/javascript">
+       (functon(){
+           emailjs.init("user_biWKlbbM6ODmQZGhVnhbr");
+       })();
+    </script>
+    <script type="text/javascript">
+        windows.onload = function() {
+            document.getElementById(-contact-form).addEventListener('submit', function(event) {
+                event.preventDefault();
+                this.contact_number.value = Math.random() * 100000 | 0;
+
+                emailjs.sendForm('service_qgsxq4a', 'template_s5r6h1l', this)
+            })
+    </script>
 </head>
-</html>
