--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,15 @@
        })();
     </script>
     <script type="text/javascript">
-        windows.onload = function() {
+        window.onload = function() {
             document.getElementById(-contact-form).addEventListener('submit', function(event) {
                 event.preventDefault();
                 this.contact_number.value = Math.random() * 100000 | 0;
 
-                emailjs.sendForm('service_qgsxq4a', 'template_s5r6h1l', this)
-            })
+                emailjs.sendForm('service_qgsxq4a', 'template_s5r6h1l', this);
+            });
+        }
     </script>
 </head>
+<body>
+    </body>
