--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <title>RTG 공식 지원 양식</title>
     <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
     <script type="text/javascript">
-       (functon(){
+       (function(){
            emailjs.init("user_biWKlbbM6ODmQZGhVnhbr");
-       })();
+        })()
     </script>
     <script type="text/javascript">
         window.onload = function() {
