--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     </script>
     <script type="text/javascript">
         window.onload = function() {
-            document.getElementById(-contact-form).addEventListener('submit', function(event) {
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
                 event.preventDefault();
                 this.contact_number.value = Math.random() * 100000 | 0;
 
