--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
         <lable>From Name</lable>
         <input type="text" name="from_name">
         
-        <label>Messages</label>
+        <label>Message</label>
         <textarea name="contact"></textarea>
         
         <input type="submit" value="Send>"
