--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
         (function() {
             // https://dashboard.emailjs.com/admin/integration
-            emailjs.init('YOUR_USER_ID');
+            emailjs.init('user_biWKlbbM6ODmQZGhVnhbr');
         })();
     </script>
     <script type="text/javascript">
@@ -16,11 +16,11 @@
                 // generate a five digit number for the contact_number variable
                 this.contact_number.value = Math.random() * 100000 | 0;
                 // these IDs from the previous steps
-                emailjs.sendForm('contact_service', 'contact_form', this)
+                emailjs.sendForm('service_qgsxq4a', 'template_s5r6h1l', this)
                     .then(function() {
-                        console.log('SUCCESS!');
+                        console.log('보내기에 성공 하였습니다!')
                     }, function(error) {
-                        console.log('FAILED...', error);
+                        console.log('보내기에 실패하였습니다.', error);
                     });
             });
         }
@@ -30,7 +30,7 @@
     <form id="contact-form">
         <input type="hidden" name="contact_number">
         <label>Name</label>
-        <input type="text" name="user_name">
+        <input type="text" name="to_name">
         <label>Email</label>
         <input type="email" name="user_email">
         <label>Message</label>
