--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">RTG</h2>
                         <p class="text-white-50">
-                            로블록스 역사상 손에 꼽을 명작이자 고퀄인 로블록스 게임으로 손꼽힐 RTG의 게임들.
+                            로블록스 역사상 손에 꼽을 명작이자 고퀄인 로블록스 게임으로 손꼽힐 RTG의 게임.
                             RTG는 여러분들의 개발 참여를 환영합니다. 
                         </p>
                     </div>
