--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+                <img class="img-fluid" src="./assets/img/ipad.png" alt="..." />
             </div>
         </section>
         <!-- Projects-->
@@ -133,9 +133,9 @@
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">추가 연락</h4>
+                                <h4 class="text-uppercase m-0">공란</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">만약 제가 디코나 이메일을 안보면 CJ대한통운#5395 또는 Rყαɳ#8562로 연락 주세요!</div>
+                                <div class="small text-black-50">공란</div>
                             </div>
                         </div>
                     </div>
